--- a/code/daftar_transaksi.html
+++ b/code/daftar_transaksi.html
@@ -571,9 +571,22 @@
                                             <button class="btn btn-success ml-4">
                                                 Beri Ulasan
                                             </button>
-                                            <button class="bg-white  border rounded-10 ml-4">
-                                                <img src="../assets/WEB/ICON/ICON WEB51.svg" class="w-35" alt="">
-                                            </button>
+                                            <div class="dropdown">
+                                                <button
+                                                    class="bg-white  border rounded-10 ml-4"
+                                                    type="button"
+                                                    id="dropdownMenuButton"
+                                                    data-mdb-toggle="dropdown"
+                                                    aria-expanded="false"
+                                                >
+                                                   <img src="../assets/WEB/ICON/ICON WEB51.svg" class="w-35" alt="">
+                                                </button>
+                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                    <li><a class="dropdown-item" href="#">Beli Lagi</a></li>
+                                                    <li><a class="dropdown-item" href="#">Tanya Penjual</a></li>
+                                                    <li><a class="dropdown-item" href="#">Bantuan</a></li>
+                                                </ul>
+                                                </div>
                                         </div>
                                     </div>
                                 </div>
@@ -616,9 +629,22 @@
                                             <button class="btn btn-success ml-4">
                                                 Beri Ulasan
                                             </button>
-                                            <button class="bg-white  border rounded-10 ml-4">
-                                                <img src="../assets/WEB/ICON/ICON WEB51.svg" class="w-35" alt="">
-                                            </button>
+                                            <div class="dropdown">
+                                                <button
+                                                    class="bg-white  border rounded-10 ml-4"
+                                                    type="button"
+                                                    id="dropdownMenuButton"
+                                                    data-mdb-toggle="dropdown"
+                                                    aria-expanded="false"
+                                                >
+                                                   <img src="../assets/WEB/ICON/ICON WEB51.svg" class="w-35" alt="">
+                                                </button>
+                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                    <li><a class="dropdown-item" href="#">Beli Lagi</a></li>
+                                                    <li><a class="dropdown-item" href="#">Tanya Penjual</a></li>
+                                                    <li><a class="dropdown-item" href="#">Bantuan</a></li>
+                                                </ul>
+                                                </div>
                                         </div>
                                     </div>
                                 </div>
