--- a/code/ulasan.html
+++ b/code/ulasan.html
@@ -621,10 +621,82 @@
                                             </form>
                                         </div>
                                     </div>
-                                    <div class="bg-light border p-3 mt-3">
-                                        <h6 class="text-center m-0 text-dark">
-                                            Tidak Ada Reputasi
-                                        </h6>
+                                    
+                                    <div class="mt-3">
+                                        <div class="card rounded-0">
+                                            <div class="card-header bg-light">
+                                                <div class="d-flex justify-content-between f-10">
+                                                    <a href="" class="text-success">INV/20210518/MPL/1251423703</a>
+                                                    <span class="fc-text">Pesanan diterima: 22 Mei 2021, 10:45</span>
+                                                </div>
+                                            </div>
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <div class="d-flex mt-2 p-2">
+                                                            <img src="../assets/WEB/ICON/ICON WEB20.svg" class="w-30" alt="">
+                                                            <div class="ml-3">
+                                                                <a href="" class="text-success f-11">Grosir ATK Jakarta</a>
+                                                                <div class="item-badge">
+                                                                    <span class="red">Penjual</span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="ml-auto">
+                                                                <button class="btn btn-success f-7"><i class="fa fa-plus"></i> Follow</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-6 border-left">
+                                                        <b class="f-10">Daftar Produk</b>
+                                                        <div class="h-150 scroll-custom p-2">
+                                                            <div class="d-flex mt-2">
+                                                                <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="w-60" alt="">
+                                                                <div class="ml-2">
+                                                                    <a href="" class="text-success ellipsis-2-line f-10">Box Givi untuk motor dan sepeda matic</a>
+                                                                    <small class="f-8">Belum diulas</small>
+                                                                </div>
+                                                                <div class="d-flex align-items-center ml-3">
+                                                                    <a href="detail_ulasan.html" class="btn btn-success rounded-10 f-7">Tulis Ulasan</a>
+                                                                </div>
+                                                            </div>
+                                                            
+                                                            <div class="d-flex mt-2">
+                                                                <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="w-60" alt="">
+                                                                <div class="ml-2">
+                                                                    <a href="" class="text-success ellipsis-2-line">Box Givi untuk motor dan sepeda matic</a>
+                                                                    <small class="f-8">Belum diulas</small>
+                                                                </div>
+                                                                <div class="d-flex align-items-center ml-3">
+                                                                    <a href="detail_ulasan.html" class="btn btn-success rounded-10 f-7">Tulis Ulasan</a>
+                                                                </div>
+                                                            </div>
+
+                                                            <div class="d-flex mt-2">
+                                                                <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="w-60" alt="">
+                                                                <div class="ml-2">
+                                                                    <a href="" class="text-success ellipsis-2-line">Box Givi untuk motor dan sepeda matic</a>
+                                                                    <small class="f-8">Belum diulas</small>
+                                                                </div>
+                                                                <div class="d-flex align-items-center ml-3">
+                                                                    <a href="detail_ulasan.html" class="btn btn-success rounded-10 f-7">Tulis Ulasan</a>
+                                                                </div>
+                                                            </div>
+
+                                                            <div class="d-flex mt-2">
+                                                                <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="w-60" alt="">
+                                                                <div class="ml-2">
+                                                                    <a href="" class="text-success ellipsis-2-line">Box Givi untuk motor dan sepeda matic</a>
+                                                                    <small class="f-8">Belum diulas</small>
+                                                                </div>
+                                                                <div class="d-flex align-items-center ml-3">
+                                                                    <a href="detail_ulasan.html" class="btn btn-success rounded-10 f-7">Tulis Ulasan</a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
