--- a/code/daftar_transaksi.html
+++ b/code/daftar_transaksi.html
@@ -520,7 +520,7 @@
                                     </div>
                                     <input type="text" class="daterange form-control ml-2 f-10 p-2" name="daterange" value="" />
                                 </div>
-                                <div class="d-flex align-items-center f-10 mt-2">
+                                <div class="d-flex align-items-center f-10 mt-2 scroll-custom-x">
                                     <div class="d-flex align-items-center f-10">
                                         <b>Status</b>
                                         <a class="p-2 ml-2 tab-label" data-mdb-toggle="tab" href="#tab-semua" role="tab">Semua</a>
@@ -536,7 +536,7 @@
                             <div class="card mt-3">
                                 <div class="shadows">
                                     <div class="card-body">
-                                        <div class="d-flex f-10 align-items-center">
+                                        <div class="d-sm-flex f-10 align-items-center">
                                             <img src="../assets/WEB/ICON/ICON WEB11.svg" class="w-30" alt="">
                                             <b class="ml-2">Belanja</b>
                                             <span class="ml-2">29 Mei 2021</span>
@@ -546,12 +546,12 @@
                                             <span class="ml-2 fc-text">INV/20210518/MPL/1251423703</span>
                                         </div>
 
-                                        <div class="d-flex mt-2 f-10">
+                                        <div class="d-sm-flex mt-2 f-10">
                                             <img src="../assets/WEB/ICON/ICON WEB17.svg" class="w-20" alt="">
                                             <b class="ml-2">Grosir ATK Jakarta</b>
                                         </div>
-                                        <div class="d-flex justify-content-between mt-1">
-                                            <div class="d-flex">
+                                        <div class="d-sm-flex justify-content-between mt-1">
+                                            <div class="d-sm-flex">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="h-60" alt="">
                                                 <div class="">
                                                     <a href="" class="parent-ellipsis text-dark f-11"><b class="ellipsis-350">BOX Givi 27710</b></a>
@@ -564,29 +564,31 @@
                                                 <b>Rp. 122.400</b>
                                             </div>
                                         </div>
-                                        <div class="d-flex align-items-center justify-content-end mt-3 f-10">
-                                            <a href="javascript:;" onclick="lihatDetailTransaksi()" class="text-link f-10">
-                                                Lihat Detail Transaksi
-                                            </a>
-                                            <button class="btn btn-success ml-4">
-                                                Beri Ulasan
-                                            </button>
-                                            <div class="dropdown">
-                                                <button
-                                                    class="bg-white  border rounded-10 ml-4"
-                                                    type="button"
-                                                    id="dropdownMenuButton"
-                                                    data-mdb-toggle="dropdown"
-                                                    aria-expanded="false"
-                                                >
-                                                   <img src="../assets/WEB/ICON/ICON WEB51.svg" class="w-35" alt="">
+                                        <div class="scroll-custom-x">
+                                            <div class="d-flex align-items-center justify-content-end mt-3 f-10">
+                                                <a href="javascript:;" onclick="lihatDetailTransaksi()" class="text-link f-10">
+                                                    Lihat Detail Transaksi
+                                                </a>
+                                                <button class="btn btn-success ml-4">
+                                                    Beri Ulasan
                                                 </button>
-                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                                    <li><a class="dropdown-item" href="#">Beli Lagi</a></li>
-                                                    <li><a class="dropdown-item" href="#">Tanya Penjual</a></li>
-                                                    <li><a class="dropdown-item" href="#">Bantuan</a></li>
-                                                </ul>
-                                                </div>
+                                                <div class="dropdown">
+                                                    <button
+                                                        class="bg-white  border rounded-10 ml-4"
+                                                        type="button"
+                                                        id="dropdownMenuButton"
+                                                        data-mdb-toggle="dropdown"
+                                                        aria-expanded="false"
+                                                    >
+                                                       <img src="../assets/WEB/ICON/ICON WEB51.svg" class="w-35" alt="">
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                        <li><a class="dropdown-item" href="#">Beli Lagi</a></li>
+                                                        <li><a class="dropdown-item" href="#">Tanya Penjual</a></li>
+                                                        <li><a class="dropdown-item" href="#">Bantuan</a></li>
+                                                    </ul>
+                                                    </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -594,7 +596,7 @@
                             <div class="card mt-3">
                                 <div class="shadows">
                                     <div class="card-body">
-                                        <div class="d-flex f-10 align-items-center">
+                                        <div class="d-sm-flex f-10 align-items-center">
                                             <img src="../assets/WEB/ICON/ICON WEB11.svg" class="w-30" alt="">
                                             <b class="ml-2">Belanja</b>
                                             <span class="ml-2">29 Mei 2021</span>
@@ -604,12 +606,12 @@
                                             <span class="ml-2 fc-text">INV/20210518/MPL/1251423703</span>
                                         </div>
 
-                                        <div class="d-flex mt-2 f-10">
+                                        <div class="d-sm-flex mt-2 f-10">
                                             <img src="../assets/WEB/ICON/ICON WEB17.svg" class="w-20" alt="">
                                             <b class="ml-2">Grosir ATK Jakarta</b>
                                         </div>
-                                        <div class="d-flex justify-content-between mt-1">
-                                            <div class="d-flex">
+                                        <div class="d-sm-flex justify-content-between mt-1">
+                                            <div class="d-sm-flex">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="h-60" alt="">
                                                 <div class="">
                                                     <a href="" class="parent-ellipsis text-dark f-11"><b class="ellipsis-350">BOX Givi 27710</b></a>
@@ -622,29 +624,31 @@
                                                 <b>Rp. 122.400</b>
                                             </div>
                                         </div>
-                                        <div class="d-flex align-items-center justify-content-end mt-3 f-10">
-                                            <a href="javascript:;" onclick="lihatDetailTransaksi()" class="text-link f-10">
-                                                Lihat Detail Transaksi
-                                            </a>
-                                            <button class="btn btn-success ml-4">
-                                                Beri Ulasan
-                                            </button>
-                                            <div class="dropdown">
-                                                <button
-                                                    class="bg-white  border rounded-10 ml-4"
-                                                    type="button"
-                                                    id="dropdownMenuButton"
-                                                    data-mdb-toggle="dropdown"
-                                                    aria-expanded="false"
-                                                >
-                                                   <img src="../assets/WEB/ICON/ICON WEB51.svg" class="w-35" alt="">
+                                        <div class="scroll-custom-x">
+                                            <div class="d-flex align-items-center justify-content-end mt-3 f-10">
+                                                <a href="javascript:;" onclick="lihatDetailTransaksi()" class="text-link f-10">
+                                                    Lihat Detail Transaksi
+                                                </a>
+                                                <button class="btn btn-success ml-4">
+                                                    Beri Ulasan
                                                 </button>
-                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                                    <li><a class="dropdown-item" href="#">Beli Lagi</a></li>
-                                                    <li><a class="dropdown-item" href="#">Tanya Penjual</a></li>
-                                                    <li><a class="dropdown-item" href="#">Bantuan</a></li>
-                                                </ul>
-                                                </div>
+                                                <div class="dropdown">
+                                                    <button
+                                                        class="bg-white  border rounded-10 ml-4"
+                                                        type="button"
+                                                        id="dropdownMenuButton"
+                                                        data-mdb-toggle="dropdown"
+                                                        aria-expanded="false"
+                                                    >
+                                                       <img src="../assets/WEB/ICON/ICON WEB51.svg" class="w-35" alt="">
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                        <li><a class="dropdown-item" href="#">Beli Lagi</a></li>
+                                                        <li><a class="dropdown-item" href="#">Tanya Penjual</a></li>
+                                                        <li><a class="dropdown-item" href="#">Bantuan</a></li>
+                                                    </ul>
+                                                    </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
