--- a/code/index.html
+++ b/code/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="col-7 nav-bar-search">
                     <div class="input-group">
-                    <span class="input-group-text border-0">Kategori</span>
+                    <span class="input-group-text border-0 el-kategori">Kategori</span>
                     <input
                         type="text"
                         class="form-control rounded f-10"
@@ -68,7 +68,7 @@
                         <a href="#">Tangga Lipat</a>
                     </div>
                 </div>
-                <div class="col-1 nav-bar-misc">
+                <div class="col-1 i-keranjang nav-bar-misc">
                     <a href="">
                         <img src="../assets/WEB/ICON/ICON WEB39.svg" style="width: 32px;" alt="">
                     </a>
@@ -3901,46 +3901,46 @@
       <div class="container p-4">
         <!--Grid row-->
         <div class="row p-4">
-          <div class="col-8">
+          <div class="col-md-8 mt-2">
             <div class="row">
-              <div class="col-4">
+              <div class="col-md-4 mt-2">
                 <h4 class="footer-onlinemol-bold">Onlinemol</h4>
                 <h6 class="footer-onlinemol"><a href="#">Tentang Onlinemol</a></h6>
                 <h6 class="footer-onlinemol"><a href="#">Karir</a></h6>
                 <h6 class="footer-onlinemol"><a href="#">Blog</a></h6>
               </div>
-              <div class="col-4">
+              <div class="col-md-4 mt-2">
                 <h4 class="footer-onlinemol-bold">Beli</h4>
                 <h6 class="footer-onlinemol"><a href="#">Tagihan & Top Up</a></h6>
                 <h6 class="footer-onlinemol"><a href="#">Tukar Tambah Handphone</a></h6>
                 <h6 class="footer-onlinemol"><a href="#">Onlinemol COD</a></h6>
               </div>
-              <div class="col-4">
+              <div class="col-md-4 mt-2">
                 <h4 class="footer-onlinemol-bold">Bantuan dan Panduan</h4>
                 <h6 class="footer-onlinemol"><a href="#">Onlinemol Care</a></h6>
                 <h6 class="footer-onlinemol"><a href="#">Syarat dan Ketentuan</a></h6>
                 <h6 class="footer-onlinemol"><a href="#">Kebijakan Privasi</a></h6>
               </div>
-              <div class="col-4">
+              <div class="col-md-4 mt-2">
                 <!-- spacer -->
               </div>
-              <div class="col-4">
+              <div class="col-md-4 mt-2">
                 <h4 class="footer-onlinemol-bold">Jual</h4>
                 <h6 class="footer-onlinemol"><a href="#">Pusat Edukasi Seller</a></h6>
                 <h6 class="footer-onlinemol"><a href="#">Mitra Toppers</a></h6>
                 <h6 class="footer-onlinemol"><a href="#">Daftar Official Store</a></h6>
               </div>
-              <div class="col-4">
+              <div class="col-md-4 mt-2">
                 <h4 class="footer-onlinemol-bold">Keamanan</h4>
                 <img src="../assets/WEB/IMAGE/IMAGE WEB81.jpg" width="100px">
               </div>
-              <div class="col-4">
+              <div class="col-md-4 mt-2">
                 <!-- spacer -->
               </div>
-              <div class="col-4">
+              <div class="col-md-4 mt-2">
                 <!-- spacer -->
               </div>
-              <div class="col-4">
+              <div class="col-md-4 mt-2">
                 <h4 class="footer-onlinemol-bold">Ikuti Kami</h4>
                 <span class="social-icon text-muted">
                     <a href="">
@@ -3959,14 +3959,14 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4 mt-2">
             <img src="../assets/WEB/ICON/ICON WEB19.svg" class="mall-image">
             <br>
             <div class="row mt-3">
-                <div class="col-6">
+                <div class="col-md-6 mt-2">
                     <img src="../assets/WEB/IMAGE/IMAGE WEB10.png" class="img-fluid" alt="">
                 </div>
-                <div class="col-5">
+                <div class="col-md-5 mt-2">
                     <img src="../assets/WEB/IMAGE/IMAGE WEB5.png" alt="" class="img-fluid">
                 </div>
             </div>
