--- a/code/profil.html
+++ b/code/profil.html
@@ -339,7 +339,7 @@
     <section class="main-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 mt-2">
                     <div class="card border-0 ">
                         <div class="shadows rounded-10">
                             <div class="top-profile-card card-body">
@@ -478,7 +478,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 mt-2">
                     <div class="d-flex">
                         <img src="../assets/WEB/ICON/ICON WEB67.svg" class="w-30" alt="">
                         <b class="fc-text ml-2">LIDYA</b>
