--- a/code/checkout.html
+++ b/code/checkout.html
@@ -81,7 +81,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -95,7 +95,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -109,7 +109,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -123,7 +123,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -137,7 +137,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
