--- a/code/daftar_transaksi.html
+++ b/code/daftar_transaksi.html
@@ -79,7 +79,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -93,7 +93,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -107,7 +107,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -121,7 +121,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -135,7 +135,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
