--- a/code/chat.html
+++ b/code/chat.html
@@ -78,7 +78,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -92,7 +92,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -106,7 +106,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -120,7 +120,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
@@ -134,7 +134,7 @@
                                             <div class="d-flex p-3 text-left border-bottom">
                                                 <img src="../assets/WEB/IMAGE/IMAGE WEB26.jpg" class="w-40" alt="">
                                                 <div class="ml-2 parent-ellipsis align-items-start flex-column">
-                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL adsadasdasdasdasdasdasd</span>
+                                                    <span class="ellipsis-200">SLIP ON EMOTION 1 COLORFULL  </span>
                                                     <div>
                                                         <small>1 Barang (650gr)</small>
                                                     </div>
